--- a/src/App.scss
+++ b/src/App.scss
@@ -32,7 +32,7 @@
   width: 100%;
 
   img{
-    width: 20%;
+    height: 3vh;
     margin-top: 10px;
     margin-left: 10px;
 
@@ -53,13 +53,11 @@
 p{
   margin: 0px;
   margin-left: 20px;
+  margin-right: 20px;
   font-size: 1.20rem;
   align-self: center;
 }
 
-
-  
-  
 
 
 }
@@ -102,7 +100,6 @@ width: 100%;
     "a1 a2";
     grid-template-columns: 1fr 1fr;
     grid-area: $gridName;
-
 } 
 
 
@@ -116,8 +113,10 @@ width: 100%;
 
  grid-template-rows:55% 22.5% 22.5% ;
  grid-template-columns: repeat(3, 1fr);
- width: 90%; 
+ width: 1300px; 
+ min-width: 900px;
  height: 70vh;
+ min-height: 600px;
  z-index: 1;
  position: absolute;
  align-self: center;
@@ -131,7 +130,7 @@ width: 100%;
       
       img{ 
         position:relative; 
-        width: 35%;
+        height: 45%;
 
 
        }
@@ -173,8 +172,7 @@ width: 100%;
        
       img{ 
         position:relative; 
-        width: 85%;
-
+        height: 60%
 
        }
 
@@ -204,15 +202,16 @@ width: 100%;
        grid-area: a1;
        background-image:url(../src/assets/images/bg_small_stat_01.jpg);
        background-size:cover;
-       justify-content: flex-end;
+       justify-content: flex-start;
        flex-direction: column;
        align-items: center;
+       padding-top: 2vh;
        
       
        
        img{ 
         position:relative; 
-        width: 45%;
+        width: 30%;
 
 
        }
@@ -240,15 +239,15 @@ width: 100%;
        background-image:url(../src/assets/images/bg_small_stat_02.jpg);
        flex-direction: column;
        align-items: center;
-       justify-content: flex-end;
+       justify-content: flex-start;
        background-size:cover;
-
+        padding-top: 2vh;
 
 
 
        img{ 
         position:relative; 
-        width: 45%;
+        width: 30%;
 
 
        }
@@ -281,12 +280,14 @@ width: 100%;
         align-items: center;
         background-image:url(../src/assets/images/bg_small_stat_01.jpg);
         background-size:cover;
-        justify-content:flex-end;
+        justify-content:flex-start;
+        padding-top: 1vh;
+
 
 
        img{ 
         position:relative; 
-        width: 65%;
+        width: 45%;
 
 
        }
@@ -313,12 +314,13 @@ width: 100%;
         grid-area: a2;
         background-image:url(../src/assets/images/bg_small_stat_02.jpg);
         background-size:cover;
-        justify-content: flex-end;
+        justify-content: flex-start;
+        padding-top: 1vh;
 
 
        img{ 
         position:relative; 
-        width: 50%;
+        width: 30%;
 
 
        }
@@ -378,8 +380,7 @@ width: 100%;
 :nth-child(1) {
   justify-self: start;
   align-self: center;
-  width: 35%;
-  
+height:5vh;  
 }
 
 :nth-child(2) {
@@ -390,7 +391,7 @@ width: 100%;
 }
 
 :nth-child(3) {
-width: 15%;
+height:5vh;
 align-self: center;
 justify-self: end;
   
